samples/_failures_safe/1761433576_c88aa3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7338a08b.c: In function ‘main’:
./samples/SAFE/__tmp_7338a08b.c:152:28: error: missing terminating " character
  152 |                     printf("Error: Matrices must have same dimensions
      |                            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_7338a08b.c:152:21: error: expected expression at end of input
  152 |                     printf("Error: Matrices must have same dimensions
      |                     ^~~~~~
./samples/SAFE/__tmp_7338a08b.c:152:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_7338a08b.c:152:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_7338a08b.c:152:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_7338a08b.c:152:21: error: expected declaration or statement at end of input
